Ghost/K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omd-ghost-poster  # Change the name here
  namespace: omd-ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omd-ghost-poster  # Change the label here
  template:
    metadata:
      labels:
        app: omd-ghost-poster  # Change the label here
    spec:
      containers:
      - name: ghost-poster
        image: sokp/ghost-poster:v1
