Ghost/K8s/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omd-ghost-poster
  namespace: omd-ghost
spec:
  type: ClusterIP  # Use ClusterIP
  selector:
    app: omd-ghost-poster
  ports:
  - port: 4000  # Use the same port as in the Deployment
    targetPort: 4000
