Ghost/K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omd-ghost-poster
  namespace: omd-ghost
spec:
  type: LoadBalancer
  selector:
    app: omd-ghost-poster
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
