Ghost/K8s/omd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omd-ingress
  namespace: omd-ghost
spec:
  defaultBackend:
    service:
      name: omd-ghost-poster
      port:
        number: 4000
